--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="textColor">#0071cc</color>
     <color name="progressBGColor">#BA000000</color>
     <color name="cardBG">#1681237C</color>
+    <color name="green">#57A504</color>
+    <color name="darkGray">#615F5F</color>
 </resources>
