--- a/app/src/main/res/layout/activity_convert_rewards.xml
+++ b/app/src/main/res/layout/activity_convert_rewards.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/re1"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
        app:cardElevation="10dp"
         app:cardCornerRadius="6dp">
 
@@ -145,23 +145,46 @@
         </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonConvert"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/card_details"
-        android:layout_marginTop="15dp"
-        android:paddingLeft="8dp"
-        android:layout_marginBottom="50dp"
-        android:layout_centerHorizontal="true"
-        android:paddingEnd="8dp"
-        android:background="@drawable/button_bg"
-        android:text="Convert Eligible Rewards" />
+        android:id="@+id/buttons"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="40dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonConvert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:paddingLeft="8dp"
+            android:visibility="gone"
+            android:textColor="#4CAF50"
+            android:textStyle="bold"
+            android:layout_marginBottom="50dp"
+            android:layout_centerHorizontal="true"
+            android:paddingEnd="8dp"
+            android:background="@drawable/eligibility_background"
+            android:text="Add to wallet" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/unableToConvert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:paddingLeft="8dp"
+            android:visibility="gone"
+            android:textColor="#909590"
+            android:layout_centerHorizontal="true"
+            android:paddingEnd="8dp"
+            android:background="@drawable/not_eligible"
+            android:text="Not Eligible to Convert" />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/buttonConvert"
+        android:layout_below="@id/buttons"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
         android:layout_margin="8dp"
