--- a/app/src/main/res/layout/activity_withdraw_amount.xml
+++ b/app/src/main/res/layout/activity_withdraw_amount.xml
@@ -48,7 +48,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Minimum anount withdraw : Rs/-100"
+            android:text="Minimum amount withdraw : Rs/-100"
             android:textSize="12sp"
             android:textColor="@color/error"
             android:padding="8dp"
@@ -86,7 +86,7 @@
         android:layout_marginBottom="8dp"
         android:layout_toEndOf="@+id/buttonSubmit"
         android:background="@drawable/button_bg"
-        android:text="cancle" />
+        android:text="cancel" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
