--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -82,6 +82,7 @@
                         android:padding="10dp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <!--                <AutoCompleteTextView-->
                 <!--                    android:layout_width="match_parent"-->
                 <!--                    android:layout_height="wrap_content"-->
@@ -91,13 +92,23 @@
                 <!--                    android:padding="10dp"-->
                 <!--                    />-->
 
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/swap"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:elevation="8dp"
+                    android:layout_marginTop="-15dp"
+                    android:src="@drawable/swap" />
+
                 <com.google.android.material.textfield.TextInputLayout
 
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:hint="To"
+                    android:layout_marginTop="-15dp"
                     app:boxStrokeColor="@color/gradientStart"
                     app:endIconDrawable="@drawable/ic_baseline_location_on_24">
 
@@ -120,6 +131,9 @@
                     android:padding="10dp"
                     android:text="Depart Date"
                     android:textColor="#000" />
+
+
+
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/search"
