--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -192,6 +192,18 @@
 
     </com.google.android.material.card.MaterialCardView>
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/addWalletAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card_details"
+        android:layout_marginTop="8dp"
+        android:layout_alignParentStart="true"
+        android:paddingLeft="8dp"
+        android:layout_marginStart="10dp"
+        android:paddingEnd="8dp"
+        android:background="@drawable/button_bg"
+        android:text="Add amount to wallet" />
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonConvert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -199,7 +211,7 @@
         android:layout_marginTop="8dp"
         android:layout_alignParentEnd="true"
         android:paddingLeft="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="10dp"
         android:paddingEnd="8dp"
         android:background="@drawable/button_bg"
         android:text="Convert Rewards" />
